# cmake-cpp-template

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUtils.cmake  README.md
application/: CMakeLists.txt  main.cpp  pch.hpp
tests/: CMakeLists.txt  main.cpp
